--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -334,7 +334,7 @@ if('serviceWorker' in navigator){
   // navigator.serviceWorker.register('/sw.js'); // uncomment when you add a service worker
 }
 
-const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbzj4kQfA1x1wI9o9oDYqgPhb12J_8i5sGr68hRU0RaekWS5ecFErq12ziINAecJIi8/exec';
+const WEB_APP_URL = 'https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLjAAAcemK6qQsCw7nqR3RsOUxdurX3RRgD73axOthELHNWmp69EXGWT4mV_HL7wd84jTIp6lp5uYGvcxtQPMkuBz1Aq85ROSfTUlgQR9twleW5otOzo8VA0A2_0nH2lykrSniBwa0caATxE_ZbZ6mzc5fh5Wfc4qIi1zitrivuaoDLGUC_boWId_AAcTirmPus-4PZKkMg3jhhmAWQv2zDQ7ARtPCPaBnK4p756-RTvT_pWJzPpPk0qANRCWymIpjpT6FJTKkfZ5NfqfDvLK8r3Je_5dIVQT6glqYXj&lib=MicarClhAzR6lQRsYQBG0rCq1-vRkhSuq';
 
 // Load template from Sheets (CSV)
 async function loadTemplateFromSheets() {
@@ -361,5 +361,6 @@ async function syncLogsToSheets() {
 </script>
 </body>
 </html>
+
 
 
