--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -118,7 +118,9 @@
     <button id="clearBtn" class="btn ghost">Clear logs</button>
   </div>
 </main>
+
 <script>
+/* ========= CSV parser (simple) ========= */
 function parseCSV(text){
   const rows=[]; let i=0, cell='', inQ=false, row=[];
   while(i<text.length){
@@ -332,8 +334,9 @@ if('serviceWorker' in navigator){
   // navigator.serviceWorker.register('/sw.js'); // uncomment when you add a service worker
 }
 
-const WEB_APP_URL = 'https://script.google.com/macros/s/AKfycbyZ6z6upxAaTgHHv0PrKfmy98tdzJexyceQnx5SI_k/dev';
+const WEB_APP_URL = 'https://script.googleusercontent.com/macros/echo?user_content_key=AehSKLjAAAcemK6qQsCw7nqR3RsOUxdurX3RRgD73axOthELHNWmp69EXGWT4mV_HL7wd84jTIp6lp5uYGvcxtQPMkuBz1Aq85ROSfTUlgQR9twleW5otOzo8VA0A2_0nH2lykrSniBwa0caATxE_ZbZ6mzc5fh5Wfc4qIi1zitrivuaoDLGUC_boWId_AAcTirmPus-4PZKkMg3jhhmAWQv2zDQ7ARtPCPaBnK4p756-RTvT_pWJzPpPk0qANRCWymIpjpT6FJTKkfZ5NfqfDvLK8r3Je_5dIVQT6glqYXj&lib=MicarClhAzR6lQRsYQBG0rCq1-vRkhSuq';
 
+// Load template from Sheets (CSV)
 async function loadTemplateFromSheets() {
   const url = `${WEB_APP_URL}?mode=json&nocache=${Date.now()}`;
   const res = await fetch(url);
@@ -365,8 +368,6 @@ async function loadTemplateFromSheets() {
   console.log('Loaded template rows:', cleaned.length, cleaned.slice(0,3));
 }
 
-
-
-
-
-
+</script>
+</body>
+</html>
