--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- PWA Manifest & Icons -->
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#0b0e10">
-  <link rel="apple-touch-icon" href="icons/icon-192.png">
+  <link rel="apple-touch-icon" href="images.png">
 
 
   <!-- Preconnects for faster Apps Script calls -->
@@ -1033,5 +1033,6 @@ window.addEventListener('DOMContentLoaded', updateCreditVisibility);
 </script>
 </body>
 </html>
+
 
 
