--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ async function askNotificationPermission() {
   if (perm === 'granted') {
     new Notification('✅ Notifications enabled', {
       body: 'You’ll get inventory alerts here.',
-      icon: 'icons/icon-192.png'
+      icon: 'images.png'
     });
   }
 }
@@ -1033,6 +1033,7 @@ window.addEventListener('DOMContentLoaded', updateCreditVisibility);
 </script>
 </body>
 </html>
+
 
 
 
