--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
-<!-- =========================
-  Inventory Count (Mobile)
-  Clean rewrite with single sync queue, guarded init, and SW-safe fetch
-  Save this as index.html
-========================== -->
+
 <!doctype html>
 <html lang="en">
 <head>
@@ -565,104 +561,86 @@ window.addEventListener('DOMContentLoaded', updateCreditVisibility);
   // =============================================================
   // 12) SYNC & SAVE
   // =============================================================
-  async function syncSingleRowToGoogle(row){
-    try{
-      const res = await fetch(WEB_APP_URL, { method:'POST', headers:{'Content-Type':'text/plain'}, body: JSON.stringify({ action:'appendLogs', rows: [row] }) });
-      const json = await res.json();
-      if(json.ok){ return true; } else { throw new Error(json.error||'Failed'); }
-    }catch(err){ console.error('Single row sync failed:', err); return false; }
-  }
-  async function drainSyncQueue(){
-    if (!navigator.onLine) return;
-    const snapshot = readQueue();
-    if (!snapshot.length) return;
-    for (const item of snapshot){
-      const key = item.__k || makeKey(item);
-      const ok = await syncSingleRowToGoogle(item);
-      if (ok) dropFromQueue(key); else { setStatus('Some offline counts still pending sync.'); return; }
+  // =============================================================
+// 12) SYNC & SAVE  (FIXED)
+// =============================================================
+
+// Tạo payload sạch: bỏ các trường nội bộ không thuộc schema Google Sheet
+function sanitizeRowForPost(row){
+  const clone = { ...row };
+  delete clone.__k;            // internal queue key
+  delete clone._t;             // bất kỳ timestamp tạm nào trong UI
+  return clone;
+}
+
+async function syncSingleRowToGoogle(row){
+  // Dùng AbortController để có timeout (tránh treo)
+  const controller = new AbortController();
+  const t = setTimeout(() => controller.abort(), 15000); // 15s
+
+  try{
+    const cleanRow = sanitizeRowForPost(row);
+    const res = await fetch(WEB_APP_URL, {
+      method: 'POST',
+      headers: { 'Content-Type': 'application/json' },
+      body: JSON.stringify({ action: 'appendLogs', rows: [cleanRow] }),
+      signal: controller.signal
+    });
+
+    // Đọc text trước -> thử parse JSON sau, để debug tốt hơn
+    const text = await res.text();
+    let json;
+    try{ json = JSON.parse(text); }catch(e){
+      console.error('Sync error: response not JSON', { status: res.status, text });
+      return false;
     }
-    setStatus('✅ All offline counts synced.');
+
+    if (res.ok && json && json.ok === true){
+      return true;
+    } else {
+      console.error('Sync error: server returned not ok', { status: res.status, json });
+      return false;
+    }
+  }catch(err){
+    // AbortError hoặc network/CORS error
+    console.error('Single row sync failed:', err);
+    return false;
+  }finally{
+    clearTimeout(t);
   }
+}
 
-  async function saveCount(){
-    const btn = document.getElementById('saveBtn');
-    btn.disabled = true;
-    try{
-      const r = state.currentItem; if(!r) return;
-      const entriesContainer = $('#countEntries');
-      const countRows = entriesContainer.querySelectorAll('.count-row');
+// Drain queue hoàn chỉnh: dừng ở phần tử đầu lỗi để giữ thứ tự
+async function drainSyncQueue(){
+  if (!navigator.onLine) return;
+  const snapshot = readQueue();       // đọc nguyên hàng đợi hiện tại
+  if (!snapshot.length) return;
 
-      // Collect entries
-      const countData = [];
-      for(const rowEl of countRows){
-        const val = rowEl.querySelector('.qtyInp').value;
-        const qty = val === '' ? NaN : parseFloat(val);
-        const uofm = rowEl.querySelector('.uofmSel').value;
-        if(uofm !== '' && !isNaN(qty)) countData.push({ quantity: qty, uofm });
-      }
-      if(countData.length === 0) { alert('Enter quantity & select UoM for at least one entry.'); return; }
-
-      // Base computation
-      const { base_uofm, base_qty } = computeBaseTotals(countData);
-
-      // Compare vs last count — show confirm if >= 2x
-      let lastBaseQty=null, lastLog=null; const last=state.logsByCountId.get(String(r.count_id||'').trim());
-      if (last){ lastLog=last; const derived=computeBaseFromLog(last); if (Number.isFinite(derived.base_qty)) lastBaseQty=derived.base_qty; }
-      if (Number.isFinite(base_qty) && lastBaseQty!=null && lastBaseQty>0 && base_qty>=2*lastBaseQty){
-        const dt = lastLog?.count_on ? new Date(lastLog.count_on) : null;
-        const when = dt ? `${dt.toLocaleDateString()} ${dt.toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'})}` : '(no time)';
-        const H=(q,u)=>`<b style="color:#42a5ff">${q}</b> <b style="color:#ffb020">${u}</b>`;
-        const enteredHTML = countData.filter(e=>e.uofm && Number.isFinite(e.quantity)).map(e=>H(e.quantity,e.uofm)).join(', ');
-        const triples=[ {u:lastLog?.count_uofm_1,q:lastLog?.quantity_1},{u:lastLog?.count_uofm_2,q:lastLog?.quantity_2},{u:lastLog?.count_uofm_3,q:lastLog?.quantity_3} ]
-          .filter(t=>t.u && (t.q===0 || (typeof t.q==='number' && !Number.isNaN(t.q))));
-        const lastHTML = triples.map(t=>H(t.q,t.u)).join(', ');
-        const msg = `
-          <div>You entered: ${enteredHTML || '(no entries)'}</div>
-          <div style="margin-top:8px;color:#aaa">This seems high compared to the last count.</div>
-          <div style="margin-top:12px">Last count: ${lastHTML || '(none)'} on <span style="color:#8fa6bf">${when}</span></div>
-          <div style="margin-top:16px;font-weight:500">Please confirm to continue.</div>`;
-        const ok = await confirmLargeChange(msg); if(!ok) return;
-      }
-
-      // Consolidated row
-      const consolidatedLog = {
-        count_id: r.count_id,
-        count_on: nowISO(),
-        storage_location: r.storage_location,
-        location_id: r.location_id,
-        template_id: r.template_id,
-        item_id: r.item_id,
-        item: r.item,
-        count_uofm_1: countData[0]?.uofm || '', quantity_1: countData[0]?.quantity ?? null,
-        count_uofm_2: countData[1]?.uofm || '', quantity_2: countData[1]?.quantity ?? null,
-        count_uofm_3: countData[2]?.uofm || '', quantity_3: countData[2]?.quantity ?? null,
-        base_uofm: base_uofm || '', base_qty: base_qty
-      };
-
-      // Upsert local cache (for UI immediate correctness)
-      const logKey=String(r.count_id||'').trim();
-      const existing=readLogs();
-      const idx=existing.findIndex(x=>String(x.count_id||'').trim()===logKey);
-      if(idx>=0) existing[idx]=consolidatedLog; else existing.push(consolidatedLog);
-      writeLogs(existing);
-      indexLogs(existing.concat(state.remoteLogs||[]));
-
-      // Close sheet & refresh list
-      closeSheet();
-      openLocation(state.currentStore, state.currentTemplate, state.currentStorageArea);
-
-      // Enqueue for sync (de‑duped)
-      enqueueUnique(consolidatedLog);
-
-      // Try sync now if online
-      if(navigator.onLine){ setStatus('Saved • syncing…'); await drainSyncQueue(); }
-      else { setStatus('Saved locally (offline) — will sync automatically when back online.'); }
-
-    } finally {
-      const btn = document.getElementById('saveBtn');
-      if (btn) btn.disabled = false;
+  for (const item of snapshot){
+    const key = item.__k || makeKey(item);
+    const ok = await syncSingleRowToGoogle(item);
+    if (ok){
+      // Xóa khỏi hàng đợi
+      dropFromQueue(key);
+    } else {
+      // Giữ lại và dừng — tránh spam server và mất thứ tự
+      setStatus('Some offline counts still pending sync.');
+      return;
     }
   }
+  setStatus('✅ All offline counts synced.');
+}
+
+// Đảm bảo enqueue luôn có __k duy nhất theo count_id|count_on
+function enqueueUnique(row){
+  const q = readQueue();
+  const k = makeKey(row);
+  if (!q.some(x => x.__k === k)){
+    q.push({ ...row, __k: k });
+    writeQueue(q);
+  }
+}
+
 
   // =============================================================
   // 13) EXPORT UTILITIES (duplicate UoMs suppressed)
