--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
-
+<!-- =========================
+  Inventory Count (Mobile)
+  Clean rewrite with single sync queue, guarded init, and SW-safe fetch
+  Save this as index.html
+========================== -->
 <!doctype html>
 <html lang="en">
 <head>
@@ -561,11 +565,6 @@ window.addEventListener('DOMContentLoaded', updateCreditVisibility);
   // =============================================================
   // 12) SYNC & SAVE
   // =============================================================
-  // =============================================================
-// 12) SYNC & SAVE  (FIXED)
-// =============================================================
-
-// Tạo payload sạch: bỏ các trường nội bộ không thuộc schema Google Sheet
 function sanitizeRowForPost(row){
   const clone = { ...row };
   delete clone.__k;            // internal queue key
@@ -641,6 +640,85 @@ function enqueueUnique(row){
   }
 }
 
+  async function saveCount(){
+    const btn = document.getElementById('saveBtn');
+    btn.disabled = true;
+    try{
+      const r = state.currentItem; if(!r) return;
+      const entriesContainer = $('#countEntries');
+      const countRows = entriesContainer.querySelectorAll('.count-row');
+
+      // Collect entries
+      const countData = [];
+      for(const rowEl of countRows){
+        const val = rowEl.querySelector('.qtyInp').value;
+        const qty = val === '' ? NaN : parseFloat(val);
+        const uofm = rowEl.querySelector('.uofmSel').value;
+        if(uofm !== '' && !isNaN(qty)) countData.push({ quantity: qty, uofm });
+      }
+      if(countData.length === 0) { alert('Enter quantity & select UoM for at least one entry.'); return; }
+
+      // Base computation
+      const { base_uofm, base_qty } = computeBaseTotals(countData);
+
+      // Compare vs last count — show confirm if >= 2x
+      let lastBaseQty=null, lastLog=null; const last=state.logsByCountId.get(String(r.count_id||'').trim());
+      if (last){ lastLog=last; const derived=computeBaseFromLog(last); if (Number.isFinite(derived.base_qty)) lastBaseQty=derived.base_qty; }
+      if (Number.isFinite(base_qty) && lastBaseQty!=null && lastBaseQty>0 && base_qty>=2*lastBaseQty){
+        const dt = lastLog?.count_on ? new Date(lastLog.count_on) : null;
+        const when = dt ? `${dt.toLocaleDateString()} ${dt.toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'})}` : '(no time)';
+        const H=(q,u)=>`<b style="color:#42a5ff">${q}</b> <b style="color:#ffb020">${u}</b>`;
+        const enteredHTML = countData.filter(e=>e.uofm && Number.isFinite(e.quantity)).map(e=>H(e.quantity,e.uofm)).join(', ');
+        const triples=[ {u:lastLog?.count_uofm_1,q:lastLog?.quantity_1},{u:lastLog?.count_uofm_2,q:lastLog?.quantity_2},{u:lastLog?.count_uofm_3,q:lastLog?.quantity_3} ]
+          .filter(t=>t.u && (t.q===0 || (typeof t.q==='number' && !Number.isNaN(t.q))));
+        const lastHTML = triples.map(t=>H(t.q,t.u)).join(', ');
+        const msg = `
+          <div>You entered: ${enteredHTML || '(no entries)'}</div>
+          <div style="margin-top:8px;color:#aaa">This seems high compared to the last count.</div>
+          <div style="margin-top:12px">Last count: ${lastHTML || '(none)'} on <span style="color:#8fa6bf">${when}</span></div>
+          <div style="margin-top:16px;font-weight:500">Please confirm to continue.</div>`;
+        const ok = await confirmLargeChange(msg); if(!ok) return;
+      }
+
+      // Consolidated row
+      const consolidatedLog = {
+        count_id: r.count_id,
+        count_on: nowISO(),
+        storage_location: r.storage_location,
+        location_id: r.location_id,
+        template_id: r.template_id,
+        item_id: r.item_id,
+        item: r.item,
+        count_uofm_1: countData[0]?.uofm || '', quantity_1: countData[0]?.quantity ?? null,
+        count_uofm_2: countData[1]?.uofm || '', quantity_2: countData[1]?.quantity ?? null,
+        count_uofm_3: countData[2]?.uofm || '', quantity_3: countData[2]?.quantity ?? null,
+        base_uofm: base_uofm || '', base_qty: base_qty
+      };
+
+      // Upsert local cache (for UI immediate correctness)
+      const logKey=String(r.count_id||'').trim();
+      const existing=readLogs();
+      const idx=existing.findIndex(x=>String(x.count_id||'').trim()===logKey);
+      if(idx>=0) existing[idx]=consolidatedLog; else existing.push(consolidatedLog);
+      writeLogs(existing);
+      indexLogs(existing.concat(state.remoteLogs||[]));
+
+      // Close sheet & refresh list
+      closeSheet();
+      openLocation(state.currentStore, state.currentTemplate, state.currentStorageArea);
+
+      // Enqueue for sync (de‑duped)
+      enqueueUnique(consolidatedLog);
+
+      // Try sync now if online
+      if(navigator.onLine){ setStatus('Saved • syncing…'); await drainSyncQueue(); }
+      else { setStatus('Saved locally (offline) — will sync automatically when back online.'); }
+
+    } finally {
+      const btn = document.getElementById('saveBtn');
+      if (btn) btn.disabled = false;
+    }
+  }
 
   // =============================================================
   // 13) EXPORT UTILITIES (duplicate UoMs suppressed)
