--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover, maximum-scale=1" />
-  <title>Inventory Count (Mobile)</title>
+  <title>Inventory</title>
 
   <!-- PWA Manifest & Icons -->
   <link rel="manifest" href="/manifest.webmanifest">
   <meta name="theme-color" content="#0b0e10">
-  <link rel="apple-touch-icon" href="/images.png">
+  <link rel="apple-touch-icon" href="/artwork.png">
 
   <!-- Preconnects for faster Apps Script calls -->
   <link rel="preconnect" href="https://script.google.com">
@@ -844,6 +844,7 @@ function enqueueUnique(row){
 </script>
 </body>
 </html>
+
 
 
 
